src/structured/fortran/strumpack_dense_mpi.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.1.0+fortran
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! STRUMPACK -- STRUctured Matrices PACKage, Copyright (c) 2014, The
! Regents of the University of California, through Lawrence Berkeley
! National Laboratory (subject to receipt of any required approvals
! from the U.S. Dept. of Energy).  All rights reserved.
!
! If you have questions about your rights to use or distribute this
! software, please contact Berkeley Lab's Technology Transfer
! Department at TTD@lbl.gov.
!
! NOTICE. This software is owned by the U.S. Department of Energy. As
! such, the U.S. Government has been granted for itself and others
! acting on its behalf a paid-up, nonexclusive, irrevocable,
! worldwide license in the Software to reproduce, prepare derivative
! works, and perform publicly and display publicly.  Beginning five
! (5) years after the date permission to assert copyright is obtained
! from the U.S. Department of Energy, and subject to any subsequent
! five (5) year renewals, the U.S. Government is granted for itself
! and others acting on its behalf a paid-up, nonexclusive,
! irrevocable, worldwide license in the Software to reproduce,
! prepare derivative works, distribute copies to the public, perform
! publicly and display publicly, and to permit others to do so.
!
! Developers: Pieter Ghysels, Francois-Henry Rouet, Xiaoye S. Li.
!             (Lawrence Berkeley National Lab, Computational Research
!             Division).
!
!> @file strumpack_dense_mpi.f90
!> @brief Fortran interface to the structured matrix functionality
!
module strumpack_dense_mpi
 use, intrinsic :: ISO_C_BINDING
 implicit none
 private

 ! DECLARATION CONSTRUCTS

 integer, parameter :: swig_cmem_own_bit = 0
 integer, parameter :: swig_cmem_rvalue_bit = 1
 type, bind(C) :: SwigClassWrapper
  type(C_PTR), public :: cptr = C_NULL_PTR
  integer(C_INT), public :: cmemflags = 0
 end type
 type, public :: SWIGTYPE_CSPOptions
  type(SwigClassWrapper), public :: swigdata
 end type
 public :: SP_s_struct_from_dense2d
 public :: SP_d_struct_from_dense2d
 public :: SP_c_struct_from_dense2d
 public :: SP_z_struct_from_dense2d
 public :: SP_s_struct_from_elements_mpi
 public :: SP_d_struct_from_elements_mpi
 public :: SP_c_struct_from_elements_mpi
 public :: SP_z_struct_from_elements_mpi
 integer(C_INT), parameter, public :: OMPI_SKIP_MPICXX = 1_C_INT
 public :: SP_s_struct_local_rows
 public :: SP_d_struct_local_rows
 public :: SP_c_struct_local_rows
 public :: SP_z_struct_local_rows
 public :: SP_s_struct_begin_row
 public :: SP_d_struct_begin_row
 public :: SP_c_struct_begin_row
 public :: SP_z_struct_begin_row

! WRAPPER DECLARATIONS
interface
function SP_s_struct_from_dense2d(s, comm, rows, cols, a, ia, ja, desca, opts) &
bind(C, name="SP_s_struct_from_dense2d_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
real(C_FLOAT) :: a
integer(C_INT), intent(in), value :: ia
integer(C_INT), intent(in), value :: ja
integer(C_INT) :: desca
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_d_struct_from_dense2d(s, comm, rows, cols, a, ia, ja, desca, opts) &
bind(C, name="SP_d_struct_from_dense2d_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
real(C_DOUBLE) :: a
integer(C_INT), intent(in), value :: ia
integer(C_INT), intent(in), value :: ja
integer(C_INT) :: desca
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_c_struct_from_dense2d(s, comm, rows, cols, a, ia, ja, desca, opts) &
bind(C, name="SP_c_struct_from_dense2d_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_PTR), value :: a
integer(C_INT), intent(in), value :: ia
integer(C_INT), intent(in), value :: ja
integer(C_INT) :: desca
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_z_struct_from_dense2d(s, comm, rows, cols, a, ia, ja, desca, opts) &
bind(C, name="SP_z_struct_from_dense2d_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_PTR), value :: a
integer(C_INT), intent(in), value :: ia
integer(C_INT), intent(in), value :: ja
integer(C_INT) :: desca
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_s_struct_from_elements_mpi(s, comm, rows, cols, a, opts) &
bind(C, name="SP_s_struct_from_elements_mpi_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_FUNPTR), value :: a
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_d_struct_from_elements_mpi(s, comm, rows, cols, a, opts) &
bind(C, name="SP_d_struct_from_elements_mpi_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_FUNPTR), value :: a
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_c_struct_from_elements_mpi(s, comm, rows, cols, a, opts) &
bind(C, name="SP_c_struct_from_elements_mpi_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_FUNPTR), value :: a
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_z_struct_from_elements_mpi(s, comm, rows, cols, a, opts) &
bind(C, name="SP_z_struct_from_elements_mpi_f") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: swigtype_cspoptions
type(C_PTR) :: s
integer(C_INT), intent(in), value :: comm
integer(C_INT), intent(in), value :: rows
integer(C_INT), intent(in), value :: cols
type(C_FUNPTR), value :: a
type(SWIGTYPE_CSPOptions), intent(in) :: opts
integer(C_INT) :: fresult
end function

function SP_s_struct_local_rows(s) &
bind(C, name="SP_s_struct_local_rows") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_d_struct_local_rows(s) &
bind(C, name="SP_d_struct_local_rows") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_c_struct_local_rows(s) &
bind(C, name="SP_c_struct_local_rows") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_z_struct_local_rows(s) &
bind(C, name="SP_z_struct_local_rows") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_s_struct_begin_row(s) &
bind(C, name="SP_s_struct_begin_row") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_d_struct_begin_row(s) &
bind(C, name="SP_d_struct_begin_row") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_c_struct_begin_row(s) &
bind(C, name="SP_c_struct_begin_row") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

function SP_z_struct_begin_row(s) &
bind(C, name="SP_z_struct_begin_row") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), intent(in), value :: s
integer(C_INT) :: fresult
end function

end interface


end module
